--- a/src/ShopFront/Views/Home/Index.cshtml
+++ b/src/ShopFront/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 @inject Microsoft.Extensions.Options.IOptions<ShopFront.Models.Settings> settings
 @{
-    ViewData["Title"] = "Welcome home pjlago";
+    ViewData["Title"] = "Welcome home pjlago2";
 }
 
 <div class="row">
